--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
 </head>
 <body>
   <!-- Header -->
-  <header>
-    <div class="container">
-      <h1>StudyScopes</h1>
-      <nav>
-        <ul class="menu">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Category</a></li>
-          <li><a href="#">About</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
+<header>
+  <div class="container">
+    <img src="logo.png" alt="StudyScopes" class="logo">
+    <nav>
+      <ul class="menu">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Category</a></li>
+        <li><a href="#">About</a></li>
+      </ul>
+    </nav>
+  </div>
+</header>
 
   <!-- Main Content -->
   <main>
