--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <img src="logo.png" alt="StudyScopes" class="logo">
     <nav>
       <ul class="menu">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Category</a></li>
-        <li><a href="#">About</a></li>
+        <li><a href="https://studyscopes.github.io/welcome">Home</a></li>
+        <li><a href="category.html">Category</a></li>
+        <li><a href="about.html">About</a></li>
       </ul>
     </nav>
   </div>
@@ -31,8 +31,8 @@
   <!-- Newsletter Section -->
   <section class="newsletter">
     <div class="container">
-      <h2>Subscribe to Our Newsletter</h2>
-      <p>Get the latest updates and articles straight to your inbox.</p>
+      <h2>Subscribe to StudyScopes</h2>
+      <p>Get the latest notes & question archive straight to your inbox.</p>
       <form>
         <input type="email" placeholder="Enter your email" required>
         <button type="submit">Subscribe</button>
