--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
   <!-- Main Content -->
   <main>
+    <h1>StudyScopes!</h1>
     <div class="hero">
       <blockquote>"100x Your Potential!"</blockquote>
     </div>
