--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <li><a href="https://studyscopes.github.io/welcome">Home</a></li>
         <li><a href="category.html">Category</a></li>
         <li><a href="about.html">About</a></li>
+        <li><a href="login.html">Login</a></li>
       </ul>
     </nav>
   </div>
