--- a/index.html
+++ b/index.html
@@ -25,8 +25,11 @@
 
   <!-- Main Content -->
   <main>
-    <h1>StudyScopes!</h1>
+    
     <div class="hero">
+        <div class="title">
+        StudyScopes!
+        </div>
       <blockquote>"100x Your Potential!"</blockquote>
     </div>
   </main>
